Bug fix where spacing is off when .text-warning is present

--- a/console/app/assets/stylesheets/console/_tile.scss
+++ b/console/app/assets/stylesheets/console/_tile.scss
@@ -38,6 +38,9 @@
       .count, .restart {
         margin-left: 20px;
       }
+      .text-warning + .count {
+        margin-left: 0;
+      }
       .gear-icon, {
         font-size: 20px;
       }
